--- a/index.html
+++ b/index.html
@@ -4,169 +4,343 @@
     <!-- Meta tags Obrigatórias -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+
+	<link rel="stylesheet" href="C:\workspace_web\Baratchim-Ecommerce\Baratchim-Ecommerce\src\css\style.css">
 
     <title>Ecommerce Barachim</title>
   </head>
   <body>
-    <header><!-- MENU SUPERIOR -->
-		<nav class="navbar navbar-expand-lg nevbar-dark py-3" style="background-color: #FFD700;">
+	<!-- TAGS PARA DEIXA O SITE RESPONSIVO -->
+	<header><!-- MENU SUPERIOR -->
+		<nav class="navbar navbar-expand-lg nevbar-dark py-2" style="background-color: #d2d2d2">
 			<div class="container-fluid">
 				<!-- logo da empresa arrendonda -->
-				<img src="scr/img/logo1.jpg" class="rounded-circle"alt="Logo da empresa"> 
+				<img src="src/img/logo.jpg" class="rounded-circle" alt="Logo da empresa">
 				<button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-					data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-					aria-expanded="false" aria-label="Toggle navigation">
+					data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+					aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon"></span>
 				</button>
 
 				<!-- BOTOES DE NAVEGAÇÃO SUPERIORES -->
 				<div class="collapse navbar-collapse" id="navbarSupportedContent">
 					<ul class="navbar-nav ml-auto">
-						<li class="nav-item"><a href=""></a>
-							<i class="bi bi-basket-fill" href="#"></i>
+						<li class="nav-item">
+							<a class="nav-link" href="C:\workspace_web\Baratchim-Ecommerce\Baratchim-Ecommerce\index.html">Home</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="index.html">Home</a>
+							<a class="nav-link" href="C:\workspace_web\Baratchim-Ecommerce\Baratchim-Ecommerce\Playstation.html">Playstation</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="scr/pags/Playstation.html">Playstation</a>
+							<a class="nav-link" href="C:\workspace_web\Baratchim-Ecommerce\Baratchim-Ecommerce\Xbox.html">Xbox</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="scr/pags/Xbox.html">xbox</a>
+							<a class="nav-link" href="C:\workspace_web\Baratchim-Ecommerce\Baratchim-Ecommerce\Contato.html">Contato</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="scr/pags/Contato.html">Contato</a>
+							<a class="nav-link" href="C:\workspace_web\Baratchim-Ecommerce\Baratchim-Ecommerce\src\pags_login\login_screen.html">Faça Login</a>
 						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="#">Faça Login</a>
-						</li>
-						
-						
 					</ul>
 				</div>
 			</div>
 		</nav>
 	</header>
-		<!-- carrossel com as promoções 
-		conteudo de maior relevancia -->
-
-		<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-			<div class="carousel-inner">
-			  <div class="carousel-item active">
-				<img class="d-block w-100" src="scr/img/playstation/fifa22.jpg" alt="Primeiro Slide">
-				<p>oi</p>
-			  </div>
-			  <div class="carousel-item">
-				<img class="d-block w-100" src="scr/img/xbox.jpg" alt="Segundo Slide">
-			  </div>
-			  <div class="carousel-item">
-				<img class="d-block w-100" src="scr/img/playstation/acao/farcry_5.jpg" alt="Terceiro Slide">
-				<p>ola</p>
-			  </div>
+	<!-- FRASE INICIAL -->
+	<div class="frase">
+		<td>
+			<tr>
+				<h4> Promoções e Lancamentos para Playstation & Xbox voçê encontra só aqui!</h4>
+			</tr>
+		</td>
+	</div>
+	<!-- promoções -->
+	<div class="promocoes">
+		<td>
+			<tr>
+				<h3>Promoções</h3>
+			</tr>
+		</td>
+	</div>
+	<div class="container">
+		<div class="row">
+			<div class="col-sm">
+				<tr>
+					<td>
+						<img src="src/img/jogos/overwatch 2.jpg" alt="imagem jogo">
+					</td>
+				</tr>
+				<tr>
+					<td>
+						<ul style="list-style: none;">
+							<li> Overwatch 2 </li>
+							<li>R$ 190,00 (259,00)</li>
+						</ul>
+					</td>
+				</tr>
 			</div>
-			<a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-			  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-			  <span class="sr-only">Anterior</span>
-			</a>
-			<a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-			  <span class="carousel-control-next-icon" aria-hidden="true"></span>
-			  <span class="sr-only">Próximo</span>
-			</a>
-		  </div>
-
-		<div id="lacancamento">
-			<td>
-				<h3>Lancamentos </h3>
-			</td>
+			<div class="col-sm">
+				<tr>
+					<td>
+						<img src="src/img/jogos/roblox.jpg" alt="imagem jogo">
+					</td>
+				</tr>
+				<tr>
+					<td>
+						<ul style="list-style: none;">
+							<li> Roblox</li>
+							<li>R$ 100,00 (359,00)</li>
+						</ul>
+					</td>
+				</tr>
+			</div>
+			<div class="col-sm">
+				<tr>
+					<td>
+						<img src="src/img/jogos/Fronzen free fall.jpg" alt="imagem jogo">
+					</td>
+				</tr>
+				<tr>
+					<td>
+						<ul style="list-style: none;">
+							<li> Fronzen free fall </li>
+							<li>R$ 89,99 (150,00)</li>
+						</ul>
+					</td>
+				</tr>
+			</div>
+			<div class="col-sm">
+				<tr>
+					<td>
+						<img src="src/img/jogos/F12022.jpg" alt="imagem jogo">
+					</td>
+				</tr>
+				<tr>
+					<td>
+						<ul style="list-style: none;">
+							<li> F1 2022</li>
+							<li> R$ 300,00 (490,00)</li>
+						</ul>
+					</td>
+				</tr>
+			</div>
 		</div>
-		<div id="produtos_lancamento">
+		<div class="row">
+			<div class="col-sm">
+				<tr>
+					<td>
+						<img src="src/img/jogos/grid.jpg" alt="imagem jogo">
+					</td>
+				</tr>
+				<tr>
+					<td>
+						<ul style="list-style: none; text-align: left;">
+							<li> Grid Legends </li>
+							<li>R$ 140,00 (299,00)</li>
+						</ul>
+					</td>
+				</tr>
+			</div>
+			<div class="col-sm">
+				<tr>
+					<td>
+						<img src="src/img/jogos/opus castle.jpg" alt="imagem jogo">
+					</td>
+				</tr>
+				<tr>
+					<td>
+						<ul style="list-style: none;">
+							<li> Opus Castle</li>
+							<li>R$ 100,00 (159,00)</li>
+						</ul>
+					</td>
+				</tr>
+			</div>
+			<div class="col-sm">
+				<tr>
+					<td>
+						<img src="src/img/jogos/destiny.jpg" alt="imagem jogo">
+					</td>
+				</tr>
+				<tr>
+					<td>
+						<ul style="list-style: none;">
+							<li> Destiny </li>
+							<li>R$ 100,00 (250,00)</li>
+						</ul>
+					</td>
+				</tr>
+			</div>
+			<div class="col-sm">
+				<tr>
+					<td>
+						<img src="src/img/jogos/injustice2.jpg" alt="imagem jogo">
+					</td>
+				</tr>
+				<tr>
+					<td>
+						<ul style="list-style: none;">
+							<li> Injustice 2</li>
+							<li> R$ 150,00 (300,00)</li>
+						</ul>
+					</td>
+				</tr>
+			</div>
+		</div>
+	<div class="frase">
+		<td>
 			<tr>
-				<td>
-					<p><img src="	" alt="imagem jogo"></p>
-				</td>
-				<td>
-					<p><img src="img/Playstation/acao/cod.jpg" alt="imagem jogo"></p>
-				</td>
+				<h4> Aqui voçê encontra os melhores jogos para Xbox e Playstation</h4>
 			</tr>
+		</td>
+	</div>
+	</div>
+	<!-- Lancamentos -->
+	<div class="lancamentos">
+		<td>
 			<tr>
-				<td>
-					<ul>
-						<li> FarCry 6 </li>
-						<li> Ubisoft </li>
-						<li> 5 de R$ 89,99(450,00) ou R$ 448,00</li>
-					</ul>
-				</td>
-				<td>
-					<ul>
-						<li> Call Of Duty Cold War/Black OPS </li>
-						<li> Activision </li>
-						<li> 5 de R$ 87,99(440,00) ou R$ 437,96 </li>
-					</ul>
-				</td>
+				<h3>Lancamentos</h3>
 			</tr>
+		</td>
+	</div>
+	<div class="container">
+		<div class="row">
+			<div class="col-sm">
+				<tr>
+					<td>
+						<img src="src/img/jogos/fifa 23.jpg" alt="imagem jogo">
+					</td>
+				</tr>
+				<tr>
+					<td>
+						<ul style="list-style: none;">
+							<li> Fifa 2023 </li>
+							<li>R$ 599,00</li>
+						</ul>
+					</td>
+				</tr>
+			</div>
+			<div class="col-sm">
+				<tr>
+					<td>
+						<img src="src/img/jogos/FarCry 6 gold edition.jpg" alt="imagem jogo">
+					</td>
+				</tr>
+				<tr>
+					<td>
+						<ul style="list-style: none;">
+							<li> FarCry 6 Gold Edition</li>
+							<li>R$ 699,00</li>
+						</ul>
+					</td>
+				</tr>
+			</div>
+			<div class="col-sm">
+				<tr>
+					<td>
+						<img src="src/img/jogos/cod_warzone.jpg" alt="imagem jogo">
+					</td>
+				</tr>
+				<tr>
+					<td>
+						<ul style="list-style: none;">
+							<li> Cod warzone </li>
+							<li>R$ 450,00</li>
+						</ul>
+					</td>
+				</tr>
+			</div>
+			<div class="col-sm">
+				<tr>
+					<td>
+						<img src="src/img/jogos/Michael Jordan NBA 2k23.jpg" alt="imagem jogo">
+					</td>
+				</tr>
+				<tr>
+					<td>
+						<ul style="list-style: none;">
+							<li> NBA 2k23</li>
+							<li> R$ 490,00</li>
+						</ul>
+					</td>
+				</tr>
+			</div>
 		</div>
-	<div class="carousel-item">
-		<img src="scr/img/playstation/acao/cod.jpg" alt="imagemaaaaa">
-		<div class="carousel-caption d-none d-md-block">
-		  <h5>...</h5>
-		  <p>...</p>
+		<div class="row">
+			<div class="col-sm">
+				<tr>
+					<td>
+						<img src="src/img/jogos/mortal kombat 11.jpg" alt="imagem jogo">
+					</td>
+				</tr>
+				<tr>
+					<td>
+						<ul style="list-style: none;">
+							<li> Mortal Kombat 11 </li>
+							<li>R$ 499,00</li>
+						</ul>
+					</td>
+				</tr>
+			</div>
+			<div class="col-sm">
+				<tr>
+					<td>
+						<img src="src/img/jogos/asphalt 9.jpg" alt="imagem jogo">
+					</td>
+				</tr>
+				<tr>
+					<td>
+						<ul style="list-style: none;">
+							<li> Asphalt 9</li>
+							<li>R$ 599,00</li>
+						</ul>
+					</td>
+				</tr>
+			</div>
+			<div class="col-sm">
+				<tr>
+					<td>
+						<img src="src/img/jogos/fortnite.jpg" alt="imagem jogo">
+					</td>
+				</tr>
+				<tr>
+					<td>
+						<ul style="list-style: none;">
+							<li> Fortnite </li>
+							<li>R$ 300,00</li>
+						</ul>
+					</td>
+				</tr>
+			</div>
+			<div class="col-sm">
+				<tr>
+					<td>
+						<img src="src/img/jogos/star wars.jpg" alt="imagem jogo">
+					</td>
+				</tr>
+				<tr>
+					<td>
+						<ul style="list-style: none;">
+							<li> star wars</li>
+							<li> R$ 550,00</li>
+						</ul>
+					</td>
+				</tr>
+			</div>
 		</div>
-	  </div>
-	<!-- TOPICO PROMOÇÃO -->
-	<div id="promocao">
-		<tr>
-			<td>
-				<h3> Promoção</h3>
-			</td>
-		</tr>
 	</div>
-	<div id="produtos_promocao">
-		<tr>
-			<td>
-				<p>
-					<img src="img/xbox/esportes/pes21.jpg" alt="imagem jogo">
-				</p>
-			</td>
-			<td>
-				<p>
-					<img src="img/Playstation/acao/farcry_5.jpg" alt="imagem jogo">
-				</p>
-			</td>
-		</tr>
-		<tr>
-			<td>
-				<ul>
-					<li> Pes 2021 </li>
-					<li> Konami </li>
-					<li> 5 de R$ 22,60(113,00) ou R$ 105,00</li>
-				</ul>
-			</td>
-			<td>
-				<ul>
-					<li> FarCry 5 </li>
-					<li> Ubisoft </li>
-					<li> 5 de R$ 86,7(433,50) ou R$ 427,96 </li>
-				</ul>
-			</td>
-		</tr>
+	<div class="rodape">
+		<td>
+			<tr>
+				<li>
+					<p>Para qualquer duvida, elogio ou reclamação sobre nosso site, entre em contato conosco </p>
+					<p> clicando no link abaixo. </p>
+					<a href="#" class="badge badge-dark">Entre em contato</a>
+				</li>
+			</tr>
+		</td>
 	</div>
-	<div id="rodape">
-		<ul>
-			<li>
-				<p>Para qualquer duvida, elogio ou reclamação sobre nosso site, entre em contato conosco </p>
-			</li>
-			<p> clicando no link abaixo. </p>
-			<li>
-				<a href="Contato.html">
-					Fale Conosco
-				</a>
-			</li>
-		</ul>
-	</div>
-
     <!-- JavaScript (Opcional) -->
     <!-- jQuery primeiro, depois Popper.js, depois Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
